Start with home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
 
     <string name="no_news">No news.</string>
     <string name="NoInternet">No internet connection.</string>
+    <string name="image_des">Image</string>
 
 </resources>
